--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -160,3 +160,83 @@ ul {
       100% { transform: rotate(360deg); }
     }
 }
+
+.aboutcontainer {
+  text-align: center;
+  padding: 20px;
+  align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+  margin-bottom: 20px;
+  font-size: 2em;
+}
+
+.card-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  @media screen and (max-width: 900px) {
+    display: grid;
+    gap: 20px;
+  }
+}
+
+.card {
+  background-color: #195936;
+  padding: 20px;
+  border-radius: 5px;
+  width: 20rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 0 10px;
+  color: white;
+}
+.card1 {
+  animation: slideInTop 3s ease-in-out forwards;
+}
+.card2 {
+  animation: slideInTop 3s ease-in-out forwards;
+}
+.card3 {
+  animation: slideInTop 2s ease-in-out forwards;
+}
+
+.card h2 {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+@keyframes slideInTop {
+  from {
+    transform: translateY(-100%);  /* Change translateX to translateY */
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);  /* Change translateX to translateY */
+    opacity: 1;
+  }
+}
+@keyframes slideIn {
+  from {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.modalWidthSm{
+  width: 30rem;
+  @media screen and (max-width: 900px) {
+    width: 20rem;
+  }
+}
+.modalWidth{
+  width: 40rem;
+  @media screen and (max-width: 900px) {
+    width: 20rem;
+  }
+}
