--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -197,10 +197,13 @@ h1 {
   animation: slideInTop 3s ease-in-out forwards;
 }
 .card2 {
-  animation: slideInTop 3s ease-in-out forwards;
+  animation: slideInTop 3.5s ease-in-out forwards;
 }
 .card3 {
   animation: slideInTop 2s ease-in-out forwards;
+}
+.card4 {
+  animation: slideInTop 2.5s ease-in-out forwards;
 }
 
 .card h2 {
